# sfcpp

./: .gitignore  CMakeLists.txt
src/img/: PolygonHierarchy.cpp  utils.cpp
src/math/: math.hpp
src/sfc/: CurveInformation.cpp
test/: main.cpp  rendering.cpp  rendering.hpp
